--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,3 +1,12 @@
 {
-  "promptDelete": false
+  "promptDelete": false,
+  "vimMode": false,
+  "showLineNumber": false,
+  "alwaysUpdateLinks": true,
+  "pdfExportSettings": {
+    "pageSize": "A4",
+    "landscape": false,
+    "margin": "0",
+    "downscalePercent": 100
+  }
 }
