--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "552e069fc66d041a",
+        "id": "3c04fc565e0a60c4",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
             "file": "Me/はじめまして.md",
-            "mode": "preview"
+            "mode": "source"
           }
         }
       }
@@ -95,17 +95,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "552e069fc66d041a",
+  "active": "3c04fc565e0a60c4",
   "lastOpenFiles": [
     "Me/はじめまして.md",
-    "GCP/GAE/Standard.md",
-    "GCP/GAE/Flexible.md",
-    "GCP/GAE/GAE.md",
-    "Me/アナリストへの道.md",
-    "GCP/for_GPU.md",
+    "Me/考えていること.md",
+    "GCP/認証・認可/認証・認可.md",
     "GCP/GCP.md",
-    "GCP/機械学習.md",
-    "GCP/機械学習エンジンのデプロイ.md",
-    "AWS/AWS.md"
+    "GCP/Compute Engine.md",
+    "GCP/Security/Security.md",
+    "GCP/Security/Secret Manager.md",
+    "GCP/Security/Security Command Center.md",
+    "GCP/App Engine/Flexible.md",
+    "GCP/App Engine/Standard.md"
   ]
 }
