--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "470e1f463d9fbde0",
+        "id": "86532f37612503da",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Me/はじめまして.md",
+            "file": "API/Twitter/Twitter API.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Me/はじめまして.md",
+                "file": "API/Twitter/Twitter API.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,17 +94,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "470e1f463d9fbde0",
+  "active": "86532f37612503da",
   "lastOpenFiles": [
-    "Me/はじめまして.md",
-    "templates/my_script.js.md",
-    "templates/ga4.md",
-    "Me/アナリストへの道.md",
-    "AWS/Elastic Load Balancing.md",
-    "Docker/DB/DB.md",
-    "aws_query_editor_front.png",
+    "API/Twitter/Twitter API.md",
+    "Docker/Network.md",
     "Docker/Local Dynamo DB.md",
     "Docker/Docker.md",
-    "情報工学基礎/情報工学基礎.md"
+    "Me/経験/スタートアップアンチパターン.md",
+    "Me/経験.md",
+    "Me/はじめまして.md",
+    "JavaScript/TypeScript/Intersection.md",
+    "JavaScript/TypeScript/AnyとInterfaceとType.md",
+    "JavaScript/TypeScript/TypeScript.md"
   ]
 }
