:+1:Create default api server

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "86532f37612503da",
+        "id": "62cdf4cfa9677439",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "API/Twitter/Twitter API.md",
+            "file": "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "認証と",
+                "query": "dev",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "API/Twitter/Twitter API.md",
+                "file": "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,17 +94,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "86532f37612503da",
+  "active": "62cdf4cfa9677439",
   "lastOpenFiles": [
-    "API/Twitter/Twitter API.md",
-    "Docker/Network.md",
-    "Docker/Local Dynamo DB.md",
-    "Docker/Docker.md",
-    "Me/経験/スタートアップアンチパターン.md",
-    "Me/経験.md",
+    "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
     "Me/はじめまして.md",
-    "JavaScript/TypeScript/Intersection.md",
-    "JavaScript/TypeScript/AnyとInterfaceとType.md",
-    "JavaScript/TypeScript/TypeScript.md"
+    "test.md",
+    "Me/失敗談.md",
+    "Me/技術.md",
+    "GCP/GCP.md",
+    "GCP/サーバーレス/GAE.md",
+    "GCP/サーバーレス/Cloud Run.md",
+    "ツール/設計/設計.md",
+    "AWS/AWS.md"
   ]
 }
