:+1:Clone secret repository

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "62cdf4cfa9677439",
+        "id": "5679e45fa7ffa16a",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Me/はじめまして.md",
+            "file": "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
             "mode": "source"
           }
         }
@@ -39,7 +39,7 @@
             "state": {
               "type": "search",
               "state": {
-                "query": "dev",
+                "query": "",
                 "matchingCase": false,
                 "explainSearch": false,
                 "collapseAll": false,
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Me/はじめまして.md",
+                "file": "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,17 +94,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "62cdf4cfa9677439",
+  "active": "5679e45fa7ffa16a",
   "lastOpenFiles": [
-    "Me/はじめまして.md",
     "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
-    "test.md",
-    "Me/失敗談.md",
     "Me/技術.md",
-    "GCP/GCP.md",
-    "GCP/サーバーレス/GAE.md",
-    "GCP/サーバーレス/Cloud Run.md",
-    "ツール/設計/設計.md",
-    "AWS/AWS.md"
+    "Python/Python.md",
+    "Python/標準機能/並列処理.md",
+    "情報工学基礎/アルゴリズム/SHA.md",
+    "Me/考えていること.md",
+    "無題のファイル.md",
+    "ローカルグラフ.md",
+    "Docker/基本操作.md",
+    "Me/はじめまして.md"
   ]
 }
