:+1:Add top image.png

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -97,14 +97,14 @@
   "active": "5679e45fa7ffa16a",
   "lastOpenFiles": [
     "Me/ぼくはなぜナレッジベースを作ろうと思ったか。.md",
+    "Me/はじめまして.md",
+    "Me/失敗談.md",
+    "ツール/設計/設計.md",
     "Me/技術.md",
+    "JavaScript/TypeScript/React/Redux.md",
     "Python/Python.md",
     "Python/標準機能/並列処理.md",
     "情報工学基礎/アルゴリズム/SHA.md",
-    "Me/考えていること.md",
-    "無題のファイル.md",
-    "ローカルグラフ.md",
-    "Docker/基本操作.md",
-    "Me/はじめまして.md"
+    "Me/考えていること.md"
   ]
 }
