:+1:Add top image.png

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,12 +4,12 @@
     "type": "split",
     "children": [
       {
-        "id": "427a57e1e7d85174",
+        "id": "c8213439e6ca0e2d",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "GCP/Compute Power/Kubernetes.md",
+            "file": "Me/思想/MOCを使おう.md",
             "mode": "preview"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "GCP/Compute Power/Kubernetes.md",
+                "file": "Me/思想/MOCを使おう.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,17 +94,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "427a57e1e7d85174",
+  "active": "c8213439e6ca0e2d",
   "lastOpenFiles": [
-    "GCP/Compute Power/Kubernetes.md",
-    "Me/思想/GCPはいいぞ.md",
     "Me/思想/MOCを使おう.md",
-    "GCP/Compute Power/Compute Engine.md",
-    "GCP/DWH・DB/BigQuery.md",
-    "GCP/GCP.md",
-    "GCP/無題のファイル.md",
-    "GCP/DWH.md",
-    "アルゴリズムとコーディング/ページランクアルゴリズム.md",
-    "google.png.png"
+    "Web技術/Web技術.md",
+    "Web技術/WebSocket.md",
+    "情報工学基礎/アルゴリズム/BASE64.md",
+    "情報工学基礎/アルゴリズム/SHA.md",
+    "情報工学基礎/情報工学基礎.md",
+    "情報工学基礎/認証と認可.md",
+    "Me/技術.md",
+    "ツール/設計/設計.md",
+    "Me/はじめまして.md"
   ]
 }
