:+1:Add top image.png

--- a/.obsidian/workspace
+++ b/.obsidian/workspace
@@ -4,13 +4,13 @@
     "type": "split",
     "children": [
       {
-        "id": "c8213439e6ca0e2d",
+        "id": "c06b245846ed42f9",
         "type": "leaf",
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Me/思想/MOCを使おう.md",
-            "mode": "preview"
+            "file": "ツール/アクセス解析ツール/アクセス解析ツール.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Me/思想/MOCを使おう.md",
+                "file": "ツール/アクセス解析ツール/アクセス解析ツール.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -94,17 +94,17 @@
     "width": 300,
     "collapsed": true
   },
-  "active": "c8213439e6ca0e2d",
+  "active": "c06b245846ed42f9",
   "lastOpenFiles": [
-    "Me/思想/MOCを使おう.md",
-    "Web技術/Web技術.md",
-    "Web技術/WebSocket.md",
-    "情報工学基礎/アルゴリズム/BASE64.md",
-    "情報工学基礎/アルゴリズム/SHA.md",
-    "情報工学基礎/情報工学基礎.md",
-    "情報工学基礎/認証と認可.md",
-    "Me/技術.md",
+    "ツール/アクセス解析ツール/アクセス解析ツール.md",
+    "ツール/DB/DBクライアントソフト.md",
+    "ツール/設計/アーキテクチャ図.md",
     "ツール/設計/設計.md",
-    "Me/はじめまして.md"
+    "ツール/ツール.md",
+    "images/google.png.png",
+    "images/詳解.png",
+    "images/概要.png",
+    "GCP/GCP.md",
+    "Products/Products.md"
   ]
 }
