:+1:Add top image.png

--- a/.obsidian/appearance.json
+++ b/.obsidian/appearance.json
@@ -1,6 +1,9 @@
 {
-  "baseFontSize": 16,
+  "baseFontSize": 15,
   "theme": "moonstone",
   "translucency": false,
-  "cssTheme": ""
+  "cssTheme": "",
+  "enabledCssSnippets": [
+    "obsidian_code_block"
+  ]
 }
