--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -9,5 +9,6 @@
     "margin": "0",
     "downscalePercent": 100
   },
-  "defaultViewMode": "preview"
+  "defaultViewMode": "preview",
+  "foldHeading": true
 }
